Jenkins "pipeline Script"

--- a/roles/jenkins/templates/mjob.xml
+++ b/roles/jenkins/templates/mjob.xml
@@ -23,7 +23,7 @@
             <jenkins.branch.BranchSource>
                 <source class="jenkins.plugins.git.GitSCMSource" plugin="git@5.2.1">
                     <id>122cbea3-9310-4c69-88e4-0f05b6327ff9</id>
-                    <remote>https://github.com/hemanthtadikonda</remote>
+                    <remote>https://github.com/{{ item.repo_name }}</remote>
                     <credentialsId></credentialsId>
                     <traits>
                         <jenkins.plugins.git.traits.BranchDiscoveryTrait/>
